@@ -74,6 +74,8 @@ typedef struct ThreadSpecificData {
     Tk_ImageType *oldImageTypeList;
 				/* First in a list of all known old-style
 				 * image types. */
+    int initialized;		/* Set to 1 if we've initialized the
+				 * structure. */
 } ThreadSpecificData;
 static Tcl_ThreadDataKey dataKey;
 
@@ -81,9 +83,46 @@ static Tcl_ThreadDataKey dataKey;
  * Prototypes for local functions:
  */
 
+static void		ImageTypeThreadExitProc(ClientData clientData);
 static void		DeleteImage(ImageMaster *masterPtr);
 static void		EventuallyDeleteImage(ImageMaster *masterPtr,
 			    int forgetImageHashNow);
+
+/*
+ *----------------------------------------------------------------------
+ *
+ * ImageTypeThreadExitProc --
+ *
+ *	Clean up the registered list of image types.
+ *
+ * Results:
+ *	None.
+ *
+ * Side effects:
+ *	The thread's linked lists of photo image formats is deleted.
+ *
+ *----------------------------------------------------------------------
+ */
+
+static void
+ImageTypeThreadExitProc(
+    ClientData clientData)	/* not used */
+{
+	Tk_ImageType *freePtr;
+    ThreadSpecificData *tsdPtr =
+	    Tcl_GetThreadData(&dataKey, sizeof(ThreadSpecificData));
+
+    while (tsdPtr->oldImageTypeList != NULL) {
+	freePtr = tsdPtr->oldImageTypeList;
+	tsdPtr->oldImageTypeList = tsdPtr->oldImageTypeList->nextPtr;
+	ckfree((char *) freePtr);
+    }
+    while (tsdPtr->imageTypeList != NULL) {
+	freePtr = tsdPtr->imageTypeList;
+	tsdPtr->imageTypeList = tsdPtr->imageTypeList->nextPtr;
+	ckfree((char *) freePtr);
+    }
+}
 
 /*
  *----------------------------------------------------------------------
@@ -108,28 +147,40 @@ void
 Tk_CreateOldImageType(
     Tk_ImageType *typePtr)	/* Structure describing the type. All of the
 				 * fields except "nextPtr" must be filled in
-				 * by caller. Must not have been passed to
-				 * Tk_CreateImageType previously. */
+				 * by caller. */
 {
-    ThreadSpecificData *tsdPtr = (ThreadSpecificData *)
-            Tcl_GetThreadData(&dataKey, sizeof(ThreadSpecificData));
+	Tk_ImageType *copyPtr;
+    ThreadSpecificData *tsdPtr =
+	    Tcl_GetThreadData(&dataKey, sizeof(ThreadSpecificData));
 
-    typePtr->nextPtr = tsdPtr->oldImageTypeList;
-    tsdPtr->oldImageTypeList = typePtr;
+    if (!tsdPtr->initialized) {
+	tsdPtr->initialized = 1;
+	Tcl_CreateThreadExitHandler(ImageTypeThreadExitProc, NULL);
+    }
+    copyPtr = (Tk_ImageType *) ckalloc(sizeof(Tk_ImageType));
+    *copyPtr = *typePtr;
+    copyPtr->nextPtr = tsdPtr->oldImageTypeList;
+    tsdPtr->oldImageTypeList = copyPtr;
 }
 
 void
 Tk_CreateImageType(
     Tk_ImageType *typePtr)	/* Structure describing the type. All of the
 				 * fields except "nextPtr" must be filled in
-				 * by caller. Must not have been passed to
-				 * Tk_CreateImageType previously. */
+				 * by caller. */
 {
-    ThreadSpecificData *tsdPtr = (ThreadSpecificData *)
-            Tcl_GetThreadData(&dataKey, sizeof(ThreadSpecificData));
+	Tk_ImageType *copyPtr;
+    ThreadSpecificData *tsdPtr =
+	    Tcl_GetThreadData(&dataKey, sizeof(ThreadSpecificData));
 
-    typePtr->nextPtr = tsdPtr->imageTypeList;
-    tsdPtr->imageTypeList = typePtr;
+    if (!tsdPtr->initialized) {
+	tsdPtr->initialized = 1;
+	Tcl_CreateThreadExitHandler(ImageTypeThreadExitProc, NULL);
+    }
+    copyPtr = (Tk_ImageType *) ckalloc(sizeof(Tk_ImageType));
+    *copyPtr = *typePtr;
+    copyPtr->nextPtr = tsdPtr->imageTypeList;
+    tsdPtr->imageTypeList = copyPtr;
 }
 
 /*
